deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wechat-h5-frontend
  namespace: three-class
spec:
  selector:
    matchLabels:
      app: wechat-h5-frontend
  template:
    metadata:
      labels:
        app: wechat-h5-frontend
    spec:
      containers:
        - name: wechat-h5-fronted
          image: DOCKER_REGISTRY/donviewclass-wechat-h5-frontend:DOCKER_IMAGE_TAG
          resources:
            limits:
              memory: 128Mi
              cpu: "50m"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: iclasssecret
