deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wechat-h5-frontend
  namespace: three-class
spec:
  selector:
   app: wechat-h5-frontend
  ports:
   - port: 80
     protocol: TCP
